fix(jump_to_note): make jump to note taller

--- a/apps/client/src/widgets/dialogs/jump_to_note.css
+++ b/apps/client/src/widgets/dialogs/jump_to_note.css
@@ -1,6 +1,10 @@
 .jump-to-note-dialog .modal-dialog {
     max-width: 900px;
     width: 90%;
+
+    body.mobile & {
+        height: 100vh;
+    }
 }
 
 .jump-to-note-dialog .modal-header {
